--- a/templates/icecast/nginx.conf.j2
+++ b/templates/icecast/nginx.conf.j2
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name stream.{{ domain }};
+    server_name {{ domain_prefix }}.{{ domain }};
     return 301 https://$host$request_uri;
 }
 
@@ -15,7 +15,7 @@ server {
     ssl_certificate      /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key  /etc/letsencrypt/live/{{ domain }}/privkey.pem;
     
-    server_name stream.{{ domain }};
+    server_name {{ domain_prefix }}.{{ domain }};
     
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
