--- a/templates/liquidsoap/radio.liq.j2
+++ b/templates/liquidsoap/radio.liq.j2
@@ -4,15 +4,16 @@ set("log.file.path", "/dev/null")
 set("log.stdout", false)
 set("server.telnet", false)
 set("harbor.bind_addrs", ["0.0.0.0"])
-set("init.daemon.pidfile",true)
-set("init.daemon.pidfile.path","/opt/liquidsoap/liquidsoap.pid")
+
+#set("init.daemon.pidfile",true)
+#set("init.daemon.pidfile.path","/opt/liquidsoap/liquidsoap.pid")
 
 # tweak these values if you have lag, skipping, buffer underrun etc
 # set("frame.duration",0.04)
 # set("root.max_latency",60.)
 
 #def pedidos() = 
-#    result = list.hd(get_process_lines(default="", "sudo -u nginx /usr/bin/php /var/www/site.com/artisan getsong"))
+#    result = list.hd(get_process_lines(default="", "sudo -u nginx /usr/bin/php /var/www/{{ domain }}/artisan getsong"))
 #    request.create(result)
 #end
 #laravel = request.dynamic(pedidos)
