--- a/templates/icecast/nginx.conf.j2
+++ b/templates/icecast/nginx.conf.j2
@@ -24,6 +24,6 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     
     location / {
-        proxy_pass http://localhost:8000;
+        proxy_pass http://localhost:{{ radio_port }};
     }
 }
