--- a/templates/nginx/snippets/default.conf.j2
+++ b/templates/nginx/snippets/default.conf.j2
@@ -1,6 +1,9 @@
+index index.php index.html;
+
+charset utf-8;
+
 location / {
-    fastcgi_intercept_errors on;
-    try_files $uri $uri/ /index.php?$query_string;
+    try_files $uri $uri/ =404;
 }
 
 location = /favicon.ico { access_log off; log_not_found off; }
@@ -13,6 +16,6 @@ location ~ \.php$ {
     fastcgi_pass unix:/run/php/php{{ php_version }}-fpm.sock;
 }
 
-location ~ /\.(?!well-known).* {
+location ~ /\.ht {
     deny all;
 }
