--- a/templates/nginx/default.conf.j2
+++ b/templates/nginx/default.conf.j2
@@ -18,20 +18,7 @@ server {
     ssl_certificate         /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key     /etc/letsencrypt/live/{{ domain }}/privkey.pem;
 
-    root /var/www/{{ domain }};
-    index index.php index.html;
     server_name {{ domain }};
 
-    location / {
-        try_files $uri $uri/ =404;
-    }
-
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/run/php/php{{ php_version }}-fpm.sock;
-    }
-
-    location ~ /\.ht {
-        deny all;
-    }
+    include snippets/default.conf;
 }
