--- a/templates/icecast/icecast.orig.xml.j2
+++ b/templates/icecast/icecast.orig.xml.j2
@@ -1,15 +1,15 @@
 <icecast>
-    <location>Brazil</location>
+    <location>Earth</location>
     <admin>sistematico@gmail.com</admin>
     <limits>
         <clients>1000</clients>
         <sources>3</sources>
-        <queue-size>{{ radio_queue_size }}</queue-size>
+        <queue-size>524288</queue-size>
         <client-timeout>30</client-timeout>
         <header-timeout>15</header-timeout>
         <source-timeout>10</source-timeout>
         <burst-on-connect>1</burst-on-connect>
-        <burst-size>{{ radio_burst_size }}</burst-size>
+        <burst-size>65535</burst-size>
     </limits>
 
     <authentication>
@@ -22,7 +22,7 @@
     <hostname>localhost</hostname>
 
     <listen-socket>
-        <port>{{ radio_port }}</port>
+        <port>8000</port>
         <shoutcast-mount>/{{ radio_mountpoint }}</shoutcast-mount>
         <charset>UTF-8</charset>
         <stream-name>{{ radio_name }}</stream-name>
