--- a/templates/lep/centos/nginx/sites.d/domain.conf.j2
+++ b/templates/lep/centos/nginx/sites.d/domain.conf.j2
@@ -7,8 +7,19 @@ server {
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    server_name {{ domain }};
-    return 301 https://$host$request_uri;
+    server_name *.{{ domain }} {{ domain }};
+    return 301 https://{{ domain }}$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    ssl_certificate         /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/{{ domain }}/privkey.pem;
+
+    server_name www.{{ domain }};
+    return 301 https://{{ domain }}$request_uri;
 }
 
 server {
@@ -19,6 +30,16 @@ server {
     ssl_certificate_key     /etc/letsencrypt/live/{{ domain }}/privkey.pem;
 
     server_name {{ domain }};
+    root /var/www/{{ domain }};
+    index index.php index.html;
 
-    include conf.d/default.conf;
+    location / {
+        try_files $uri $uri/ =404;
+    }
+
+    include conf.d/php.conf;
+
+    location ~ /\.ht {
+        deny all;
+    }
 }
