--- a/templates/lep/centos/nginx/sites.d/sites.conf.j2
+++ b/templates/lep/centos/nginx/sites.d/sites.conf.j2
@@ -20,10 +20,7 @@ server {
         try_files $uri $uri/ =404;
     }
 
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/run/php-fpm/www.sock;
-    }
+    include conf.d/php.conf;
 
     location ~ /\.ht {
         deny all;
