--- a/templates/icecast/centos/liquidsoap/radio.liq.j2
+++ b/templates/icecast/centos/liquidsoap/radio.liq.j2
@@ -7,4 +7,6 @@ live = input.harbor("aovivo", port = 8080, password = "{{ radio_password }}")
 lista = playlist("/opt/liquidsoap/music")
 radio = fallback(track_sensitive=false, [live, lista])
 
-%include "output.ffmpeg.liq"
+#%include "output.vorbis.liq"
+#%include "output.ffmpeg.liq"
+%include "output.mp3.liq"
