--- a/templates/lep/centos/nginx/sites.d/domain.conf.j2
+++ b/templates/lep/centos/nginx/sites.d/domain.conf.j2
@@ -5,8 +5,8 @@ server {
 }
 
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80; # default_server
+    listen [::]:80; # default_server
     server_name *.{{ domain }} {{ domain }};
     return 301 https://{{ domain }}$request_uri;
 }
@@ -23,8 +23,8 @@ server {
 }
 
 server {
-    listen 443 ssl default_server;
-    listen [::]:443 ssl default_server;
+    listen 443 ssl; # default_server
+    listen [::]:443 ssl; # default_server
 
     ssl_certificate         /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
     ssl_certificate_key     /etc/letsencrypt/live/{{ domain }}/privkey.pem;
